Implementation of DataDependencyGraph API service
